<resources>
    <string name="app_name">Fashion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  menu bottom  -->
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_forgot_password">Forgot password</string>

<!-- product detail   -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="more_image_label">More image</string>
    <string name="description_label">Description</string>
    <string name="price_label">Price: </string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="added_to_cart">Added to Cart</string>

    <string name="order_detail">Order</string>
    <string name="label_price_0">0</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_method_cash">Cash</string>
    <string name="order_cart">Order</string>
    <string name="total">Total: </string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="message_delete">Delete</string>
    <string name="msg_order_success">Order success</string>
    <string name="msg_sign_in_error">Sign in error</string>
    <string name="msg_email_require">Email require</string>
    <string name="msg_password_require">Password require</string>
    <string name="msg_email_invalid">Email invalid</string>
    <string name="msg_sign_up_error">sign up error</string>

    <string name="text_splash">Life is not Perfect but Your Outfit Can be</string>

    <string name="msg_waiting_message">Please wait ...</string>
    <string name="msg_get_date_error">Loading data fail</string>

    <string name="label_id">Code orders:</string>
    <string name="label_address">Receiving address:</string>
    <string name="label_price">Total amount:</string>
    <string name="label_date">Order date:</string>
    <string name="label_payment">Pay:</string>
    <string name="label_menu">Menu:</string>
    <string name="btn_back">Back</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>


</resources>