<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimen_10"
    tools:ignore="ContentDescription"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_image"
        android:layout_width="@dimen/dimen_160"
        android:layout_height="@dimen/dimen_120"
        android:layout_centerVertical="true"
        app:cardCornerRadius="@dimen/dimen_10">

        <ImageView
            android:id="@+id/img_product_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_5"
        android:layout_toStartOf="@+id/tv_delete"
        android:layout_toEndOf="@+id/layout_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_name_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_product_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:textSize="@dimen/text_size_12" />
        <TextView
            android:id="@+id/tv_product_size_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:id="@+id/tv_product_topping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12" />



    </LinearLayout>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_red_shape_corner_6"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

</RelativeLayout>