<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.CartFragment">

    <TextView
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cart"
        android:text="@string/cart"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    <View
        android:layout_below="@id/tv_cart"
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/main"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/view_line"
        android:id="@+id/rcv_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_toStartOf="@+id/tv_order_cart"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:text="@string/label_price_0"
                    android:textColor="@color/main"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_order_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_green_shape_corner_6"
                android:padding="@dimen/dimen_12"
                android:text="@string/order_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>