<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:padding="@dimen/dimen_10"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/layout_image"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_80"
                android:layout_centerVertical="true"
                app:cardCornerRadius="@dimen/dimen_6">
                <ImageView
                    android:id="@+id/img_product_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_name_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_product_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/vt_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"/>

            <RadioGroup
                android:id="@+id/rg_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>
            <TextView
                android:id="@+id/tv_topping"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"/>


            <RadioGroup
                android:id="@+id/rg_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>
        </LinearLayout>




        <LinearLayout
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_16">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:background="@drawable/bg_disable_shape_corner_6"
                android:gravity="center"
                android:layout_marginEnd="@dimen/dimen_10"
                android:padding="@dimen/dimen_10"
                android:text="@string/cancel"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:id="@+id/tv_add_cart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/dimen_10"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>