<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    tools:context=".activity.SignInActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"

        android:layout_marginTop="@dimen/dimen_70"
        android:text="@string/sign_in"
        android:textSize="40sp" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_20"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_4"
                android:text="@string/email" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                android:background="@color/white"

                android:padding="@dimen/dimen_4"
                android:text="@string/password" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20">

            <LinearLayout
                android:id="@+id/ll_already_account"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/main"
                    android:textSize="@dimen/text_size_14" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_20"
            android:background="@drawable/bg_red_shape_corner_6"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_login_change_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_size_18" />


    </LinearLayout>

</LinearLayout>