<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_back"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"

        android:textSize="40sp"
        android:layout_marginTop="@dimen/dimen_70"
        android:layout_marginStart="@dimen/dimen_20"
        />


    <LinearLayout
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:imeOptions="actionNext"
                android:id="@+id/et_email"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:padding="@dimen/dimen_18"/>
            <TextView
                android:padding="@dimen/dimen_4"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:id="@+id/ed_password"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:padding="@dimen/dimen_18"/>
            <TextView
                android:padding="@dimen/dimen_4"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:imeOptions="actionDone"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_red_shape_corner_6"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"/>




    </LinearLayout>

</LinearLayout>